adjusted facets width

--- a/docroot/themes/custom/grasacgks/scss/components/item-list.component.scss
+++ b/docroot/themes/custom/grasacgks/scss/components/item-list.component.scss
@@ -36,3 +36,6 @@
 [dir="rtl"] .item-list .item-list__comma-list li {
   padding: 0;
 }
+.facets-dropdown.js-facets-widget.js-facets-dropdown {
+  width: 100%;
+}
