--- a/docroot/themes/custom/grasacgks/css/components/item-list.component.css
+++ b/docroot/themes/custom/grasacgks/css/components/item-list.component.css
@@ -28,3 +28,7 @@
 [dir=rtl] .item-list .item-list__comma-list li {
   padding: 0;
 }
+
+.facets-dropdown.js-facets-widget.js-facets-dropdown {
+  width: 100%;
+}
