--- a/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
+++ b/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
@@ -83,4 +83,13 @@ body {
   button#edit-reset{
     display:  none;
   }
+  button#edit-reset--1{
+    display:  none;
+  }
+  button#edit-reset--2{
+    display:  none;
+  }
+  button#edit-reset--3{
+    display:  none;
+  }
 }
