added cayuga language

--- a/docroot/themes/custom/grasacgks/css/components/details.component.css
+++ b/docroot/themes/custom/grasacgks/css/components/details.component.css
@@ -45,3 +45,10 @@ form#views-exposed-form-glossary-page-1 button[id*=edit-submit-glossary] {
 form#views-exposed-form-glossary-page-1 button[id*=edit-reset] {
   margin-top: 2rem;
 }
+
+form#views-exposed-form-browse-gks-page-1 button[id*=edit-submit-browse-gks] {
+  margin-top: 1rem;
+}
+form#views-exposed-form-browse-gks-page-1 button[id*=edit-reset] {
+  margin-top: 1rem;
+}
