--- a/docroot/themes/custom/grasacgks/scss/components/details.component.scss
+++ b/docroot/themes/custom/grasacgks/scss/components/details.component.scss
@@ -61,3 +61,13 @@ form#views-exposed-form-glossary-page-1{
     margin-top: 2rem;
   }
 }
+form#views-exposed-form-browse-gks-page-1{
+  button[id*='edit-submit-browse-gks']{
+    margin-top: 1rem;
+  }
+  button[id*='edit-reset']{
+    margin-top: 1rem;
+  }
+}
+
+
