replaced default no-image and adjusted material filter css

--- a/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
+++ b/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
@@ -93,3 +93,9 @@ body {
     display:  none;
   }
 }
+// heritage material filter in view
+#views-exposed-form-browse-gks-page-1 {
+  input#edit-field-description-materials-value {
+    margin-top: 1rem;
+  }
+}
