--- a/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
+++ b/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
@@ -75,3 +75,7 @@ body {
 #navbar-collapse button#edit-reset--3 {
   display: none;
 }
+
+#views-exposed-form-browse-gks-page-1 input#edit-field-description-materials-value {
+  margin-top: 1rem;
+}
