--- a/docroot/themes/custom/grasacgks/scss/components/details.component.scss
+++ b/docroot/themes/custom/grasacgks/scss/components/details.component.scss
@@ -69,5 +69,9 @@ form#views-exposed-form-browse-gks-page-1{
     margin-top: 1rem;
   }
 }
-
+form#views-exposed-form-browse-gks-page-2{
+  #edit-field-nation-tid-target-id-collapsible {
+    margin-top: inherit;
+  }
+}
 
