--- a/docroot/themes/custom/grasacgks/templates/system/page.html.twig
+++ b/docroot/themes/custom/grasacgks/templates/system/page.html.twig
@@ -172,8 +172,9 @@
 
         {# Content #}
         {% block content %}
-          <a href="#main-content" id="main-content"></a>
+          <a href="#main-content" id="main-content" aria-label="main-content"></a>
           {{ page.content }}
+
         {% endblock %}
       </section>
 
