adjusted logo css to be inline with h1 title

--- a/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
+++ b/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
@@ -117,3 +117,9 @@ a {
   color: #0f58a6;
   background-color: transparent;
 }
+
+.navbar-brand{
+  img.img-fluid{
+    margin-top: -0.3rem;
+  }
+}
