--- a/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
+++ b/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
@@ -103,3 +103,17 @@ a {
 .navbar-brand img.img-fluid {
   margin-top: -0.3rem;
 }
+
+#block-grasacgks-main-menu ul.nav ul.dropdown-menu li.menu-item--expanded:hover ul.dropdown-menu {
+  width: 270px;
+}
+#block-grasacgks-main-menu .dropdown-menu .menu-item--expanded > a::after {
+  margin-right: -15px;
+}
+
+#block-exposedformsearch-pagepage-1 {
+  margin-left: 30px;
+}
+#block-exposedformsearch-pagepage-1 .js-form-item.js-form-type-textfield {
+  width: 200px;
+}
