--- a/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
+++ b/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
@@ -123,3 +123,19 @@ a {
     margin-top: -0.3rem;
   }
 }
+
+#block-grasacgks-main-menu {
+  ul.nav ul.dropdown-menu li.menu-item--expanded:hover ul.dropdown-menu {
+    width: 270px;
+  }
+  .dropdown-menu .menu-item--expanded > a::after {
+    margin-right: -15px;
+  }
+}
+#block-exposedformsearch-pagepage-1{
+  margin-left: 30px;
+  .js-form-item.js-form-type-textfield {
+    width: 200px;
+  }
+}
+
