added space between fields in relatives and languge items

--- a/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
+++ b/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
@@ -117,3 +117,7 @@ a {
 #block-exposedformsearch-pagepage-1 .js-form-item.js-form-type-textfield {
   width: 200px;
 }
+
+.field-outer {
+  margin: 1rem 0;
+}
