--- a/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
+++ b/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
@@ -110,6 +110,9 @@ a {
 #block-grasacgks-main-menu .dropdown-menu .menu-item--expanded > a::after {
   margin-right: -15px;
 }
+#block-grasacgks-main-menu ul.dropdown-menu > li.dropdown-item.menu-item--expanded.dropdown > ul.dropdown-menu > li.dropdown-item {
+  white-space: normal;
+}
 
 #block-exposedformsearch-pagepage-1 {
   margin-left: 30px;
