added GKS field and adjust index for three letter words

--- a/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
+++ b/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
@@ -140,3 +140,7 @@ a {
 #about-this-record-group summary {
   font-weight: bold;
 }
+
+#views-exposed-form-glossary-page-1 input[id*=edit-combine] {
+  margin-top: 2rem;
+}
