--- a/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
+++ b/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
@@ -167,3 +167,10 @@ a {
     font-weight: bold;
   }
 }
+
+// heritage material filter in view
+#views-exposed-form-glossary-page-1 {
+  input[id*="edit-combine"] {
+    margin-top: 2rem;
+  }
+}
