removed marker for list items in search view

--- a/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
+++ b/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
@@ -148,3 +148,7 @@ a {
 .layout-sidebar-first #block-facetsummary {
   margin-top: 4rem;
 }
+
+#block-grasacgks-content ol.list-group {
+  list-style-type: none;
+}
