added dropdown after Related events and moved TK label up

--- a/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
+++ b/docroot/themes/custom/grasacgks/css/base/grasacgks.base.css
@@ -129,6 +129,10 @@ a {
   width: 375px;
 }
 
+#readmore-materials-tab summary {
+  font-weight: bold;
+}
+
 #provenance-group summary {
   font-weight: bold;
 }
