--- a/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
+++ b/docroot/themes/custom/grasacgks/scss/base/grasacgks.base.scss
@@ -152,6 +152,11 @@ a {
 #views-exposed-form-search-page-page-1{
   #edit-aggregated-field--2 { width: 375px; }
 }
+#readmore-materials-tab {
+  summary{
+    font-weight: bold;
+  }
+}
 #provenance-group {
   summary{
     font-weight: bold;
